# Penugasan4_PrakRSI

./: package-lock.json
backend/: .env.example  .gitignore  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 206ab70ebca8_create_models.py
backend/src/: app.py
backend/src/controllers/: __init__.py  account_controller.py  auth.py  event_controller.py  registration_controller.py  role_controller.py  user_controller.py
backend/src/database/: connection.py
backend/src/database/schema/: __init__.py  schema.py
backend/src/dto/: account.py  auth.py  base.py  event.py  registration.py  role.py  user.py
backend/src/middlewares/: auth.py  error.py
backend/src/repositories/: account_repository.py  event_repository.py  registration_repository.py  role_repository.py  user_repository.py
backend/src/routes/: account_router.py  auth.py  event_router.py  registration_router.py  role_router.py  user_router.py
backend/src/services/: account_service.py  auth.py  event_service.py  registration_service.py  role_service.py  user_service.py
backend/src/utils/: env.py
backend/src/utils/auth/: __init__.py  auth.py  hash.py  jwt.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/add-event/: page.tsx
frontend/app/components/: Navbar.tsx
frontend/app/dashboard/: page.tsx
frontend/app/events/: page.tsx
frontend/components/: Navbar.tsx
frontend/components/ui/: checkbox.tsx
frontend/lib/services/: authService.ts  (+1 more)
next-monorepo/: package-lock.json
(+9 files in other folders)
